--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,7 @@
-Edinburgh\scotland-latest-free.shp
 .ipynb_checkpoints/
-Edinburgh/opmplc_essh_nt.zip
-Edinburgh/opmplc_essh_nt/
-Edinburgh/scotland-latest-free.shp.zip
-Edinburgh/scotland-latest-free.shp/gis_osm_buildings_a_free_1.shp
-Edinburgh/scotland-latest-free.shp/gis_osm_buildings_a_free_1.shx
-Edinburgh/scotland-latest-free.shp/gis_osm_landuse_a_free_1.shp
-Edinburgh/scotland-latest-free.shp/gis_osm_landuse_a_free_1.shx
-Edinburgh/scotland-latest-free.shp/gis_osm_railways_free_1.shp
-Edinburgh/scotland-latest-free.shp/gis_osm_railways_free_1.shx
-Edinburgh/scotland-latest-free.shp/gis_osm_roads_free_1.cpg
-Edinburgh/scotland-latest-free.shp/gis_osm_roads_free_1.dbf
-Edinburgh/scotland-latest-free.shp/gis_osm_roads_free_1.prj
-Edinburgh/scotland-latest-free.shp/gis_osm_roads_free_1.shp
-Edinburgh/scotland-latest-free.shp/gis_osm_roads_free_1.shx
-Edinburgh/scotland-latest-free.shp/gis_osm_transport_a_free_1.shp
-Edinburgh/scotland-latest-free.shp/gis_osm_transport_a_free_1.shx
-Edinburgh/scotland-latest-free.shp/gis_osm_transport_free_1.shp
-Edinburgh/scotland-latest-free.shp/gis_osm_transport_free_1.shx
-Edinburgh/scotland-latest-free.shp/gis_osm_water_a_free_1.shp
-Edinburgh/scotland-latest-free.shp/gis_osm_water_a_free_1.shx
-Edinburgh/scotland-latest-free.shp/gis_osm_waterways_free_1.shp
-Edinburgh/scotland-latest-free.shp/gis_osm_waterways_free_1.shx
+Edinburgh/
 cache/
+Factors/
 example.png
 df_Edinburgh.pkl
 df_routes.pkl
